--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </table>
         </section>
         <hr>
-        <section id="order-list">
+        <section id="unorder-list">
             <table border="1" style="border-collapse:collapse">
                 <tr>
                     <th>Quantity</th>
@@ -106,13 +106,34 @@
                 </tr>
             </table>
         </section>
-        <section>
-            <table>
+        <hr>
+        <section id="order-list">
+            <table border="1" style="border-collapse:collapse">
                 <tr>
-                    <th></th>
+                    <th>Drink</th>
+                    <th>Meals</th>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>
+                    <ol type="I">
+                        <li>Coffee</li>
+                        <li>Tea</li>
+                        <li>Milk</li>
+                        <li>Juice</li>
+                        <li>Pepsi</li>
+                        <li>Sprite</li>
+                    </ol>
+                    </td>
+                    <td>
+                    <ol type="a">
+                        <li>Spanish tortilla</li>
+                        <li>Walnut skordalia</li>
+                        <li>Spicy feta & pepper dip</li>
+                        <li>Asparagus pâté</li>
+                        <li>Coconut bread</li>
+                        <li>Beetroot crisps with coriander houmous</li>
+                    </ol>
+                    </td>
                 </tr>
             </table>
         </section>
