social-page-edit

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <nav>
-            <h1>Таблиця</h1>
+            <h1>Tables(ul/ol/Semantics)</h1>
             <ul>
                 <li><a href="index.html">Tables</a></li>
-                <li><a href="social.html">Social-Form</a></li>
+                <li><a href="social.html">Social survey</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +46,7 @@
             </table>
         </section>
         <hr>
-        <section id="unorder-list">
+        <section id="ungorder-list">
             <table border="1" style="border-collapse:collapse">
                 <tr>
                     <th>Quantity</th>
@@ -94,7 +94,7 @@
                     <td>Adjustable Wrench</td>
                     <td>8.54</td>
                 </tr>
-                 <tr>
+                <tr>
                     <td>
                         <ul type="square">
                             <li>8.00</li>
@@ -110,34 +110,56 @@
         <section id="order-list">
             <table border="1" style="border-collapse:collapse">
                 <tr>
+                    <th colspan="3">Menu</th>
+                </tr>
+                <tr>
                     <th>Drink</th>
-                    <th>Meals</th>
+                    <th>Main Dishes</th>
+                    <th>Desserts</th>
                 </tr>
                 <tr>
                     <td>
-                    <ol type="I">
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
-                        <li>Juice</li>
-                        <li>Pepsi</li>
-                        <li>Sprite</li>
-                    </ol>
+                        <ol type="I">
+                            <li>Coffee</li>
+                            <li>Tea</li>
+                            <li>Milk</li>
+                            <li>Juice</li>
+                            <li>Pepsi</li>
+                            <li>Sprite</li>
+                        </ol>
                     </td>
                     <td>
-                    <ol type="a">
-                        <li>Spanish tortilla</li>
-                        <li>Walnut skordalia</li>
-                        <li>Spicy feta & pepper dip</li>
-                        <li>Asparagus pâté</li>
-                        <li>Coconut bread</li>
-                        <li>Beetroot crisps with coriander houmous</li>
-                    </ol>
+                        <ol type="a">
+                            <li>Spanish tortilla</li>
+                            <li>Walnut skordalia</li>
+                            <li>Spicy feta & pepper dip</li>
+                            <li>Asparagus pâté</li>
+                            <li>Coconut bread</li>
+                            <li>Beetroot crisps with coriander houmous</li>
+                        </ol>
+                    </td>
+                    <td>
+                        <ol>
+                            <li>Aunt Joyce's Chocolate Cake</li>
+                            <li>Pumpkin Spice Cupcakes With Cream Cheese Frosting</li>
+                            <li>Peanut Blossoms</li>
+                            <li>Apple Slab Pie</li>
+                            <li>Chocolate Chip Cookies</li>
+                            <li>Potato Pie </li>
+                        </ol>
                     </td>
                 </tr>
             </table>
         </section>
     </article>
+    <hr>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="index.html">Tables</a></li>
+                <li><a href="social.html">Social survey</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
-
 </html>
