--- a/social.html
+++ b/social.html
@@ -9,12 +9,20 @@
 <body>
     <header>
         <nav>
-            <h1>Соціальне опитування</h1>
+            <h1>Social survey</h1>
             <ul>
                 <li><a href="index.html">Tables</a></li>
-                <li><a href="social.html">Social-Form</a></li>
+                <li><a href="social.html">Social survey</a></li>
             </ul>
         </nav>
     </header>
+    <article>
+        <form action="https://formspree.io/ostapukrainian@ukr.net" method="POST">
+            <label for="gender">1.Gender:</label>
+            <br>
+            <input type="radio" name="gender">Male</input>
+            <input type="radio" name="gender">Female</input>
+        </form>
+    </article>
 </body>
 </html>
