--- a/social.html
+++ b/social.html
@@ -17,12 +17,92 @@
         </nav>
     </header>
     <article>
+        <hr>
+        <h4>Social Networking Survey</h4>
         <form action="https://formspree.io/ostapukrainian@ukr.net" method="POST">
-            <label for="gender">1.Gender:</label>
+            <label>1.Gender:
             <br>
-            <input type="radio" name="gender">Male</input>
-            <input type="radio" name="gender">Female</input>
+            <input type="radio" name="gender" id="male" value="male" required>Male
+            <input type="radio" name="gender" id="female" value="female" required>Female
+            </label>
+            <br>
+            <hr>
+            <label for="age">2.Age:</label>
+            <br>
+            <input type="number" name="age" id="age" min="10" max="99" required>
+            <br>
+            <hr>
+            <label>3.Which of the following social networking websites do you currently have an account with? (Check all that apply)</label>
+            <br>
+            <input type="checkbox" name="third-question" value="Bebo">Bebo
+            <input type="checkbox" name="third-question" value="Facebook">Facebook
+            <input type="checkbox" name="third-question" value="Myspace">Myspace
+            <input type="checkbox" name="third-question" value="Twitter">Twitter
+            <input type="checkbox" name="third-question" value="Other">Other(please specify)
+            <input type="text" name="other-answer">
+            <br>
+            <hr>
+            <label>4.In a typical week, how likely are you to use social networking websites?</label>
+            <br>
+            <input type="radio" name="fourth-question" value="Extremely Likely">Extremely Likely
+            <input type="radio" name="fourth-question" value="Very Likely">Very Likely
+            <input type="radio" name="fourth-question" value="Moderately Likely">Moderately Likely
+            <input type="radio" name="fourth-question" value="Slightly Likely">Slightly Likely
+            <input type="radio" name="fourth-question" value="Not at all Likely">Not at all Likely
+            <br>
+            <hr>
+            <label>5.In a typical week, which of the following social networking websites do you use most often?</label>
+            <br>
+            <input type="checkbox" name="fifth-question" value="Bebo">Bebo
+            <input type="checkbox" name="fifth-question" value="Facebook">Facebook
+            <input type="checkbox" name="fifth-question" value="Myspace">Myspace
+            <input type="checkbox" name="fifth-question" value="Twitter">Twitter
+            <input type="checkbox" name="fifth-question" value="Other">Other(please specify)
+            <input type="text" name="other-answer-2">
+            <br>
+            <hr>
+            <label>6.In a typical week, about how much time do you spend using social networking websites?</label>
+            <br>
+            <label for="hours">Hours</label>
+            <input type="number" name="hours" min="1" max="1000" id="hours">
+            <br>
+            <label for="minutes">Minutes</label>
+            <input type="number" name="minutes" min="1" max="60" id="minutes">
+            <br>
+            <hr>
+            <label for="many-friends">7. About how many "friends" do you currently have on social networking websites?</label>
+            <br>
+            <input type="number" name="many-friends" id="many-friends">
+            <br>
+            <hr>
+            <label>8.About how many of your "friends" on social networking websites have you met in person?</label>
+            <br>
+            <input type="radio" name="eight-question" value="All of them">All of them
+            <input type="radio" name="eight-question" value="Most of them"> Most of them 
+            <input type="radio" name="eight-question" value="About half of them">About half of them
+            <input type="radio" name="eight-question" value="A few of them">A few of them
+            <input type="radio" name="eight-question" value="None of them">None of them
+            <br>
+            <hr>
+            <label>9. If you could use only one of the following social networking services, which would you use?</label>
+            <br>
+            <input type="radio" name="ten-question" value="Bebo">Bebo
+            <input type="radio" name="ten-question" value="Facebook">Facebook
+            <input type="radio" name="ten-question" value="Myspace">Myspace
+            <input type="radio" name="ten-question" value="Twitter">Twitter
+            <br>
+            <input type="submit" value="done">
         </form>
     </article>
+    <hr>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="index.html">Tables</a></li>
+                <li><a href="social.html">Social survey</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
