add button reset

--- a/social.html
+++ b/social.html
@@ -78,7 +78,7 @@
             <label>8.About how many of your "friends" on social networking websites have you met in person?</label>
             <br>
             <input type="radio" name="eight-question" value="All of them">All of them
-            <input type="radio" name="eight-question" value="Most of them"> Most of them 
+            <input type="radio" name="eight-question" value="Most of them"> Most of them
             <input type="radio" name="eight-question" value="About half of them">About half of them
             <input type="radio" name="eight-question" value="A few of them">A few of them
             <input type="radio" name="eight-question" value="None of them">None of them
@@ -92,6 +92,7 @@
             <input type="radio" name="ten-question" value="Twitter">Twitter
             <br>
             <input type="submit" value="done">
+            <input type="reset" value="reset">
         </form>
     </article>
     <hr>
