--- a/social.html
+++ b/social.html
@@ -32,32 +32,32 @@
             <input type="number" name="age" id="age" min="10" max="99" required>
             <br>
             <hr>
-            <label>3.Which of the following social networking websites do you currently have an account with? (Check all that apply)</label>
+            <label for="3q">3.Which of the following social networking websites do you currently have an account with? (Check all that apply)</label>
             <br>
-            <input type="checkbox" name="third-question" value="Bebo">Bebo
-            <input type="checkbox" name="third-question" value="Facebook">Facebook
-            <input type="checkbox" name="third-question" value="Myspace">Myspace
-            <input type="checkbox" name="third-question" value="Twitter">Twitter
-            <input type="checkbox" name="third-question" value="Other">Other(please specify)
+            <input type="checkbox" name="third-question" value="Bebo" id="3q">Bebo
+            <input type="checkbox" name="third-question" value="Facebook"id="3q">Facebook
+            <input type="checkbox" name="third-question" value="Myspace"id="3q">Myspace
+            <input type="checkbox" name="third-question" value="Twitter"id="3q">Twitter
+            <input type="checkbox" name="third-question" value="Other"id="3q">Other(please specify)
             <input type="text" name="other-answer">
             <br>
             <hr>
-            <label>4.In a typical week, how likely are you to use social networking websites?</label>
+            <label for="4q">4.In a typical week, how likely are you to use social networking websites?</label>
             <br>
-            <input type="radio" name="fourth-question" value="Extremely Likely">Extremely Likely
-            <input type="radio" name="fourth-question" value="Very Likely">Very Likely
-            <input type="radio" name="fourth-question" value="Moderately Likely">Moderately Likely
-            <input type="radio" name="fourth-question" value="Slightly Likely">Slightly Likely
-            <input type="radio" name="fourth-question" value="Not at all Likely">Not at all Likely
+            <input type="radio" name="fourth-question" value="Extremely Likely" id="4q">Extremely Likely
+            <input type="radio" name="fourth-question" value="Very Likely"id="4q">Very Likely
+            <input type="radio" name="fourth-question" value="Moderately Likely"id="4q">Moderately Likely
+            <input type="radio" name="fourth-question" value="Slightly Likely"id="4q">Slightly Likely
+            <input type="radio" name="fourth-question" value="Not at all Likely"id="4q">Not at all Likely
             <br>
             <hr>
-            <label>5.In a typical week, which of the following social networking websites do you use most often?</label>
+            <label for="5q">5.In a typical week, which of the following social networking websites do you use most often?</label>
             <br>
-            <input type="checkbox" name="fifth-question" value="Bebo">Bebo
-            <input type="checkbox" name="fifth-question" value="Facebook">Facebook
-            <input type="checkbox" name="fifth-question" value="Myspace">Myspace
-            <input type="checkbox" name="fifth-question" value="Twitter">Twitter
-            <input type="checkbox" name="fifth-question" value="Other">Other(please specify)
+            <input type="checkbox" name="fifth-question" value="Bebo" id="5q">Bebo
+            <input type="checkbox" name="fifth-question" value="Facebook"id="5q">Facebook
+            <input type="checkbox" name="fifth-question" value="Myspace"id="5q">Myspace
+            <input type="checkbox" name="fifth-question" value="Twitter"id="5q">Twitter
+            <input type="checkbox" name="fifth-question" value="Other"id="5q">Other(please specify)
             <input type="text" name="other-answer-2">
             <br>
             <hr>
@@ -75,21 +75,21 @@
             <input type="number" name="many-friends" id="many-friends">
             <br>
             <hr>
-            <label>8.About how many of your "friends" on social networking websites have you met in person?</label>
+            <label for="8q">8.About how many of your "friends" on social networking websites have you met in person?</label>
             <br>
-            <input type="radio" name="eight-question" value="All of them">All of them
-            <input type="radio" name="eight-question" value="Most of them"> Most of them
-            <input type="radio" name="eight-question" value="About half of them">About half of them
-            <input type="radio" name="eight-question" value="A few of them">A few of them
-            <input type="radio" name="eight-question" value="None of them">None of them
+            <input type="radio" name="eight-question" value="All of them" id="8q">All of them
+            <input type="radio" name="eight-question" value="Most of them"id="8q"> Most of them
+            <input type="radio" name="eight-question" value="About half of them"id="8q">About half of them
+            <input type="radio" name="eight-question" value="A few of them"id="8q">A few of them
+            <input type="radio" name="eight-question" value="None of them"id="8q">None of them
             <br>
             <hr>
-            <label>9. If you could use only one of the following social networking services, which would you use?</label>
+            <label for="9q">9. If you could use only one of the following social networking services, which would you use?</label>
             <br>
-            <input type="radio" name="ten-question" value="Bebo">Bebo
-            <input type="radio" name="ten-question" value="Facebook">Facebook
-            <input type="radio" name="ten-question" value="Myspace">Myspace
-            <input type="radio" name="ten-question" value="Twitter">Twitter
+            <input type="radio" name="ten-question" value="Bebo" id="9q">Bebo
+            <input type="radio" name="ten-question" value="Facebook"id="9q">Facebook
+            <input type="radio" name="ten-question" value="Myspace"id="9q">Myspace
+            <input type="radio" name="ten-question" value="Twitter"id="9q">Twitter
             <br>
             <input type="submit" value="done">
             <input type="reset" value="reset">
